--- a/index.html
+++ b/index.html
@@ -1,12 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+  <title>Bridgitte's Website</title>
+  <style>
+    /* CSS for the about page */
+    body {
+      font-family: Georgia, Lucida Grande;
+	  font-size: 23px;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: brown;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+
+    nav ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    nav ul li {
+      display: inline-block;
+      margin-right: 20px;
+    }
+
+    nav ul li a {
+      color: #fff;
+      text-decoration: none;
+      padding: 5px;
+    }
+
+    main {
+      padding: 10%;
+	  
+    }
+
+    h1 {
+      margin-top: 0;
+    }
+
+    p {
+		font-family: Verdana;
+		font-size: 15px;
+      margin-bottom: 10px;
+    }
+
+    footer {
+      background-color: brown;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-    <h1> My First HTML Page </h1>
-    <p> This is a paragraph in my <strong>first website.</strong></p>
+  <header>
+    <h1>Bridgitte's Website</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="articles.html">Articles</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <h1>About Us</h1>
+    <p> I am an aspiring full-stack web developer.
+		This website is made with a magazine layout. <br>
+		I am practicing HTML and CSS here. Once I master these, I will move on to JavaScript.<br>
+		Come and watch me get better at this. I'll be updating this site as if I'm blogging my journey to becoming a full-fledged web developer.
+	</p>
+  </main>
+
+  <footer>
+    <p>&copy; 2023 Bridgitte's Website. All rights reserved.</p>
+  </footer>
 </body>
 </html>
